<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="library_name">Медиатека</string>
    <string name="search_name">Поиск</string>
    <string name="settings_name">Настройки</string>
    <string name="library_button">Медиатека</string>
    <string name="search_button">Поиск</string>
    <string name="settings_button">Настройки</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="create_playlist_button">Создать</string>
    <string name="edit_playlist_button">Редактировать</string>
    <string name="update_playlist_button">Сохранить</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="agreement_text">Пользовательское соглашение</string>
    <string name="share_message" translatable="false">https://practicum.yandex.ru/profile/android-developer/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="share_message_subj">Приложение для музыки</string>
    <string name="support_message_email" translatable="false">puch399@yandex.ru</string>
    <string name="support_message_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint">Поиск</string>
    <string name="nothing_found">Ничего не найдено!</string>
    <string name="something_went_wrong">Что то пошло не так!</string>
    <string name="not_connect">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="refresh_btn">Обновить</string>
    <string name="clear_his_btn">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="country_head">Страна</string>
    <string name="genre_head">Жанр</string>
    <string name="year_head">Год</string>
    <string name="album_head">Альбом</string>
    <string name="duration_head">Длительность</string>
    <string name="favorite_tab">Избранные треки</string>
    <string name="playlist_tab">Плейлисты</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="playlist_add_btn">Новый плейлист</string>
    <string name="button_play">Проиграть</string>
    <string name="button_pause">Пауза</string>
    <string name="button_add_to_playlist">Добавить в плейлист</string>
    <string name="button_add_remove_favorite">Добавить/удалить в избранное</string>
    <string name="playlist_name_text">Название*</string>
    <string name="playlist_description_text">Описание</string>
    <string name="playlist_image">Обложка</string>
    <string name="playlist_count_tracks">%1$d треков</string>
    <string name="playlist_error">Не удалось загрузить плейлисты %1$s</string>
    <string name="playlist_confirm">Завершить создание плейлиста?</string>
    <string name="playlist_confirm_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_yes">Завершить</string>
    <string name="confirm_no">Отмена</string>
    <string name="track_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_name_already">Такое название плейлиста уже есть!</string>
    <string name="playlist_created">Плейлист %1$s создан!</string>
    <string name="playlist_edited">Плейлист %1$s изменён!</string>
    <string name="playlist_time_tracks">%1$d минут</string>
    <string name="playlist_detail_delete_track">Хотите удалить трек %1$s?</string>
    <string name="playlist_delete_confirm">Хотите удалить плейлист %1$s?</string>
    <string name="res_yes">Удалить</string>
    <string name="res_no">Отмена</string>
    <string name="playlist_empty_track">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_send">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_no_tracks">В этом плейлисте нет треков</string>
</resources>