<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsWindowStyle"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:text="@string/settings_name"
        android:padding="12dp"
        android:layout_gravity="start|center_vertical"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/def_text_size"
        app:drawableStartCompat="@drawable/arrow_back"
        android:drawablePadding="12dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_btn"
        style="@style/SettingsButtonStyle"
        android:text="@string/dark_theme"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/share_btn"
        style="@style/SettingsButtonStyle"
        android:text="@string/share_app"
        app:icon="@drawable/shareapp"/>

    <Button
        android:id="@+id/support_btn"
        style="@style/SettingsButtonStyle"
        android:text="@string/support_text"
        app:icon="@drawable/support"/>

    <Button
        android:id="@+id/agreement_btn"
        style="@style/SettingsButtonStyle"
        android:text="@string/agreement_text"
        app:icon="@drawable/agreement"/>

</LinearLayout>