<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsWindowStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_other"
    android:orientation="vertical"
    tools:context=".library.ui.fragments.PlaylistCreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/home"
            style="@style/BackButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/new_playlist_button"
            app:drawableStartCompat="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:background="@drawable/playlist_add_placeholder"
            android:clickable="true"
            android:contentDescription="@string/playlist_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginTop="@dimen/full32_padding"
            android:autofillHints=""
            android:background="@drawable/playlist_text_selector"
            android:hint="@string/playlist_name_text"
            android:inputType="text"
            android:padding="@dimen/medium_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholder_image"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginTop="@dimen/medium_padding"
            android:autofillHints=""
            android:background="@drawable/playlist_text_selector"
            android:hint="@string/playlist_description_text"
            android:inputType="text"
            android:padding="@dimen/medium_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            android:textCursorDrawable="@drawable/cursor_color" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlaylistButtonStyle"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/full32_padding"
            android:background="@drawable/playlist_create_button"
            android:enabled="false"
            android:text="@string/create_playlist_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>