<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="@dimen/medium_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/half_medium_padding"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/def_text_size" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginVertical="@dimen/half_medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/def_text_size"
            app:cornerRadius="@dimen/radius_button"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            app:iconTint="@color/black"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/library_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginVertical="@dimen/half_medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/library_button"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/def_text_size"
            app:cornerRadius="@dimen/radius_button"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            app:iconTint="@color/black"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginTop="@dimen/half_medium_padding"
            android:layout_marginBottom="@dimen/medium_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/settings_button"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/def_text_size"
            app:cornerRadius="@dimen/radius_button"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            app:iconTint="@color/black"
            app:iconTintMode="multiply" />
</LinearLayout>